--- a/Obasco.css
+++ b/Obasco.css
@@ -198,4 +198,83 @@ form{
 label{
   align-self: flex-start;
   font-weight: 600;
+  font-size: 1.4rem;
+  margin-bottom: .5rem;
 }
+
+input{
+  width: 80%;
+  border-radius: .5rem;
+  border: 1px solid #cccc;
+  height: 8rem;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+textarea{
+  width: 100%;
+  padding: 1rem;
+}
+
+button{
+  margin-top: 1rem;
+  width: 8rem;
+  height: 5rem;
+  border-radius: .5rem;
+  border: none;
+  background-color: burlywood;
+  color: rgb(8, 53, 38);
+  cursor: pointer;
+}
+
+button:hover{
+  opacity: 0.5;
+  color: #000000;
+}
+
+footer{
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  height: 4rem;
+}
+
+footer p{
+  font-size: 1.3rem;
+  color: #ff0fff;
+}
+
+@media screen and (min-width:768px) {
+  .main-nav ul{
+    width: 40%;
+  }
+
+  .about-section{
+    flex-direction: row;
+  }
+
+  .about-content h1{
+    font-size: 1.5rem;
+  }
+
+  .about-content p{
+    font-size: 0.9rem;
+  }
+}
+
+/* @media screen and (min-width:360px) {
+  .main-nav{
+    padding: 0 0;
+    width: 100%;
+    font-size: 10px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .main-nav ul{
+    justify-content: space-between;
+    font-size: 1.2rem;
+  }
+} */
