--- a/contact.css
+++ b/contact.css
@@ -1,25 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
-
-*,
-*::before,
-*::after{
-  box-sizing: border-box;
+.contact-main{
+  height: calc(100% - 5rem - 4rem);
 }
 
-html{
-  width: 100%;
-  font-style: 10px;
-}
 
-html, body{
-  padding: 0;
-  margin: 0;
-  min-height: 100vh;
-  max-width: 100vw;
-  height: 100vh;
-}
-
-body{
-  font-family: 'Playfair Display', serif;
-  width: 100%;
-}
